# mast-ai

./: LICENSE  README.md  bun.lockb  package-lock.json  package.json
apps/demo-basic-chat/: index.html  package.json
apps/demo-basic-chat/src/: main.ts  style.css
apps/demo-basic-chat/src/tools/: calculate.ts  getCurrentTime.ts
apps/demo-prompt-api/: index.html  package.json
apps/demo-prompt-api/src/: main.ts  style.css
apps/demo-proofread/: index.html  package.json
apps/demo-proofread/src/: main.ts  style.css
apps/demo-rust-server/: Cargo.toml
apps/demo-rust-server/src/: main.rs  provider.rs  types.rs
apps/demo-summarizer/: index.html  package.json
apps/demo-summarizer/src/: main.ts  style.css
apps/demo-translate/: index.html  package.json
apps/demo-translate/src/: main.ts  style.css
docs/: BUILT_IN_AI_PHASE1.md  BUILT_IN_AI_PHASE2.md  BUILT_IN_AI_PHASE4.md  BUILT_IN_AI_PHASE5.md  BUILT_IN_AI_PLAN.md  PLAN.md  PLAN_TOOL_EVENT_STREAMING.md  PRD.md  SPEC.md  URP_SERVER_IMPLEMENTATION.md
skills/mast-ai/: SKILL.md
skills/mast-ai/assets/: basic-agent.ts
skills/mast-ai/references/: adapters.md  core-api.md  custom-adapters.md  protocols.md
