[package]
name = "demo-rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1.0"
dotenvy = "0.15"
agent-rig = { git = "https://github.com/andreban/agent-rig.git", version = "0.1.0", features = ["full"] }
geologia = { git = "https://github.com/andreban/geologia.git", version = "0.1.0" }
async-stream = "0.3.6"
futures-util = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
